// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`The Device should match previous snapshot with router connections 1`] = `
<div
  className="device-box"
>
  <div
    className="device-name-box router-color"
  >
    <div />
  </div>
  <div
    className="vertical-bar"
  />
  <div
    className="connections-container"
  >
    <div>
      Connections:
    </div>
    <div
      className="connections-boxes"
    >
      <div
        className="connection host-color"
        id="h10"
        style={
          Object {
            "cursor": "pointer",
          }
        }
      >
        h1
      </div>
      <div
        className="connection host-color"
        id="h21"
        style={
          Object {
            "cursor": "pointer",
          }
        }
      >
        h2
      </div>
      <div
        className="connection host-color"
        id="h32"
        style={
          Object {
            "cursor": "pointer",
          }
        }
      >
        h3
      </div>
    </div>
  </div>
  <div
    className="trash-icon-container"
  >
    <div
      className="vertical-bar"
    />
    <div
      className="trash-icon"
    >
      <svg
        aria-hidden="true"
        className="svg-inline--fa fa-trash-alt fa-w-14 "
        data-icon="trash-alt"
        data-prefix="fas"
        focusable="false"
        role="img"
        style={Object {}}
        viewBox="0 0 448 512"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M32 464a48 48 0 0 0 48 48h288a48 48 0 0 0 48-48V128H32zm272-256a16 16 0 0 1 32 0v224a16 16 0 0 1-32 0zm-96 0a16 16 0 0 1 32 0v224a16 16 0 0 1-32 0zm-96 0a16 16 0 0 1 32 0v224a16 16 0 0 1-32 0zM432 32H312l-9.4-18.7A24 24 0 0 0 281.1 0H166.8a23.72 23.72 0 0 0-21.4 13.3L136 32H16A16 16 0 0 0 0 48v32a16 16 0 0 0 16 16h416a16 16 0 0 0 16-16V48a16 16 0 0 0-16-16z"
          fill="currentColor"
          style={Object {}}
        />
      </svg>
    </div>
  </div>
</div>
`;

exports[`The Device should match previous snapshots 1`] = `
<div
  className="device-box"
>
  <div
    className="device-name-box empty-color"
  >
    <div>
      test
    </div>
  </div>
  <div
    className="vertical-bar"
  />
  <div
    className="connections-container"
  >
    <div>
      Connections:
    </div>
    <div
      className="connections-boxes"
    />
  </div>
  <div
    className="trash-icon-container"
  >
    <div
      className="vertical-bar"
    />
    <div
      className="trash-icon"
    >
      <svg
        aria-hidden="true"
        className="svg-inline--fa fa-trash-alt fa-w-14 "
        data-icon="trash-alt"
        data-prefix="fas"
        focusable="false"
        role="img"
        style={Object {}}
        viewBox="0 0 448 512"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M32 464a48 48 0 0 0 48 48h288a48 48 0 0 0 48-48V128H32zm272-256a16 16 0 0 1 32 0v224a16 16 0 0 1-32 0zm-96 0a16 16 0 0 1 32 0v224a16 16 0 0 1-32 0zm-96 0a16 16 0 0 1 32 0v224a16 16 0 0 1-32 0zM432 32H312l-9.4-18.7A24 24 0 0 0 281.1 0H166.8a23.72 23.72 0 0 0-21.4 13.3L136 32H16A16 16 0 0 0 0 48v32a16 16 0 0 0 16 16h416a16 16 0 0 0 16-16V48a16 16 0 0 0-16-16z"
          fill="currentColor"
          style={Object {}}
        />
      </svg>
    </div>
  </div>
</div>
`;

exports[`The Device should match previous snapshots with host connections 1`] = `
<div
  className="device-box"
>
  <div
    className="device-name-box router-color"
  >
    <div />
  </div>
  <div
    className="vertical-bar"
  />
  <div
    className="connections-container"
  >
    <div>
      Connections:
    </div>
    <div
      className="connections-boxes"
    >
      <div
        className="connection router-color"
        id="r10"
        style={
          Object {
            "cursor": "pointer",
          }
        }
      >
        r1
      </div>
      <div
        className="connection router-color"
        id="r21"
        style={
          Object {
            "cursor": "pointer",
          }
        }
      >
        r2
      </div>
      <div
        className="connection router-color"
        id="r32"
        style={
          Object {
            "cursor": "pointer",
          }
        }
      >
        r3
      </div>
    </div>
  </div>
  <div
    className="trash-icon-container"
  >
    <div
      className="vertical-bar"
    />
    <div
      className="trash-icon"
    >
      <svg
        aria-hidden="true"
        className="svg-inline--fa fa-trash-alt fa-w-14 "
        data-icon="trash-alt"
        data-prefix="fas"
        focusable="false"
        role="img"
        style={Object {}}
        viewBox="0 0 448 512"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M32 464a48 48 0 0 0 48 48h288a48 48 0 0 0 48-48V128H32zm272-256a16 16 0 0 1 32 0v224a16 16 0 0 1-32 0zm-96 0a16 16 0 0 1 32 0v224a16 16 0 0 1-32 0zm-96 0a16 16 0 0 1 32 0v224a16 16 0 0 1-32 0zM432 32H312l-9.4-18.7A24 24 0 0 0 281.1 0H166.8a23.72 23.72 0 0 0-21.4 13.3L136 32H16A16 16 0 0 0 0 48v32a16 16 0 0 0 16 16h416a16 16 0 0 0 16-16V48a16 16 0 0 0-16-16z"
          fill="currentColor"
          style={Object {}}
        />
      </svg>
    </div>
  </div>
</div>
`;

exports[`The Device should match previous snapshots with switch connections 1`] = `
<div
  className="device-box"
>
  <div
    className="device-name-box router-color"
  >
    <div />
  </div>
  <div
    className="vertical-bar"
  />
  <div
    className="connections-container"
  >
    <div>
      Connections:
    </div>
    <div
      className="connections-boxes"
    >
      <div
        className="connection switch-color"
        id="s20"
        style={
          Object {
            "cursor": "pointer",
          }
        }
      >
        s2
      </div>
      <div
        className="connection switch-color"
        id="s31"
        style={
          Object {
            "cursor": "pointer",
          }
        }
      >
        s3
      </div>
      <div
        className="connection switch-color"
        id="s42"
        style={
          Object {
            "cursor": "pointer",
          }
        }
      >
        s4
      </div>
    </div>
  </div>
  <div
    className="trash-icon-container"
  >
    <div
      className="vertical-bar"
    />
    <div
      className="trash-icon"
    >
      <svg
        aria-hidden="true"
        className="svg-inline--fa fa-trash-alt fa-w-14 "
        data-icon="trash-alt"
        data-prefix="fas"
        focusable="false"
        role="img"
        style={Object {}}
        viewBox="0 0 448 512"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M32 464a48 48 0 0 0 48 48h288a48 48 0 0 0 48-48V128H32zm272-256a16 16 0 0 1 32 0v224a16 16 0 0 1-32 0zm-96 0a16 16 0 0 1 32 0v224a16 16 0 0 1-32 0zm-96 0a16 16 0 0 1 32 0v224a16 16 0 0 1-32 0zM432 32H312l-9.4-18.7A24 24 0 0 0 281.1 0H166.8a23.72 23.72 0 0 0-21.4 13.3L136 32H16A16 16 0 0 0 0 48v32a16 16 0 0 0 16 16h416a16 16 0 0 0 16-16V48a16 16 0 0 0-16-16z"
          fill="currentColor"
          style={Object {}}
        />
      </svg>
    </div>
  </div>
</div>
`;
